--- a/CustomInterface/CustomInterface/CustomInterface.csproj
+++ b/CustomInterface/CustomInterface/CustomInterface.csproj
@@ -44,7 +44,9 @@
   <ItemGroup>
     <Compile Include="Circle.cs" />
     <Compile Include="Hexagon.cs" />
+    <Compile Include="IDraw3D.cs" />
     <Compile Include="IPointy.cs" />
+    <Compile Include="PointyTestClass.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shape.cs" />
